# nenr

./: CMakeCache.txt  CMakeLists.txt  binary_relation.cpp  binary_relation.h  calculated_fuzzy_set.h  domain.cpp  domain.h  domain_element.cpp  domain_element.h  fuzzy_set.cpp  fuzzy_set.h  main.cpp  mutable_fuzzy_set.h  operations.cpp  operations.h  relations.cpp  relations.h  simple_domain.cpp  simple_domain.h  standard_fuzzy_sets.cpp  standard_fuzzy_sets.h
